--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -15,6 +15,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
         <script src="https://kit.fontawesome.com/9902891181.js" crossorigin="anonymous"></script>
+        <script src="https://js.stripe.com/v3/"></script>
     </head>
 
     <body>
@@ -158,12 +159,6 @@
 
         <div th:fragment="addButton(action)">
             <a class="btn btn-outline-info btn-sm my-2 px-5 float-right" th:href="@{/admin/{param}(param=${action})}">Add</a>
-        </div>
-
-        <div th:fragment="purchaseButton">
-            <form th:action="@{/user/addPurchase}" method="GET">
-                <button class="btn btn-outline-info btn-sm my-2 btn-block" type="submit" id="purchase">Check out</button>
-            </form>
         </div>
 
         <!-- author string -->
