working on stripe integration - added front end card element and mocked webhook notifications for localhost development

--- a/src/main/resources/static/css/fmstyle.css
+++ b/src/main/resources/static/css/fmstyle.css
@@ -180,3 +180,13 @@
     border-right-color: #17a2b8 !important; /* bs4-info color */
 }
 /********************************/
+
+/********************************* Stripe */
+/* Blue outline on focus */
+.StripeElement--focus {
+    border-color: #80BDFF;
+    outline:0;
+    box-shadow: 0 0 0 .2rem rgba(0,123,255,.25);
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+/********************************/
