--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -2,20 +2,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       lang="en">
-    <head th:replace="fragments/components::head('Purchases')"></head>
+    <head th:replace="fragments/components::head('Orders')"></head>
     <body>
         <div class="container-fluid">
             <header th:replace="fragments/components::header"></header>
             <!-- main categories -->
             <div th:replace="fragments/components::mainCatsNavBar"></div>
-            <div th:replace="fragments/components::title(text = 'My Purchases')"></div>
+            <div th:replace="fragments/components::title(text = 'My Orders')"></div>
             <div class="row">
                 <div class="col-sm-2 bg-white"></div>
                 <div class="col-sm-8 bg-light">
-                    <table class="table" th:each="purchase : ${purchases}">
+                    <table class="table" th:each="order : ${orders}">
                         <thead class="thead-light">
                         <tr>
-                            <th th:text="${purchase.id}">id</th>
+                            <th th:text="${order.id}">id</th>
                             <th>ISBN</th>
                             <th>Title</th>
                             <th>Image</th>
@@ -23,7 +23,7 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr th:each="item : ${purchase.items}">
+                        <tr th:each="item : ${order.items}">
                             <td></td>
                             <td><span th:text="${item.book.isbn}">isbn</span></td>
                             <td><span th:text="${item.book.title}">title</span></td>
